# mayaMatrixN

./: .gitignore  BasicNode.cpp  BasicNode.h  IstriangleIntersect.py  PointsRBF.cpp  PointsRBF.h  matrix_n.cpp  matrix_n.h  pointsData.sln  pointsData.vcxproj  pointsData.vcxproj.filters  setupEnv.ps1
BasicMLFakePhysic/: .gitignore  CMakeLists.txt  MLManage.py  imgui.ini  mlVertiesBaseTransform.cpp  train_ml_deformer.cpp  visualize_points.cpp
BasicMLFakePhysic/data/: training_data.csv  training_data2.csv
BasicMLFakePhysic/glad/include/glad/: glad.h
BasicMLFakePhysic/glad/src/: glad.c
BasicMLFakePhysic/scripts/: ManageMLDeformer.py  PrepareTrainingData.py
KD_Tree/: KD_Tree.vcxproj  KD_Tree.vcxproj.filters  kdtree.cpp
LatticGL/: LatticeGL.vcxproj  MGUI.vcxproj.filters  main.cpp
MGUI/: MGUI.vcxproj  main.cpp
RBF_lattice/: RBF_lattice.vcxproj  RBF_lattice.vcxproj.filters  rbfDeformer.cpp
deformMesh/: SimpleDeformerNode.cpp  SimpleDeformerNode.h  deformMesh.vcxproj  deformMesh.vcxproj.filters
deformMesh/x64/Debug/: deformesh.dll.recipe  deformesh.ilk  deformesh.mll.recipe  vc143.idb
deformMesh/x64/Debug/deformMesh.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  deformMesh.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
nMatrix/: nMatrix.cpp  nMatrix.vcxproj  nMatrix.vcxproj.filters
